--- a/index.html
+++ b/index.html
@@ -1,41 +1,88 @@
 <!doctype html>
-
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="@jstoetz">
+    <meta name="author" content="Jake Stoetzner">
+    <link rel="icon" href="../../../../favicon.ico">
 
-  <title>@jstoetz</title>
-  <meta name="description" content="@jstoetz | Jake Stoetzner">
-  <meta name="author" content="Jake Stoetzner">
+    <title>@jstoetz</title>
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
 
-</head>
+    <!-- Custom styles for this template -->
+		<style>
+			/* Show it is fixed to the top */
+		body {
+  		min-height: 75rem;
+  		padding-top: 4.5rem;
+		}
 
-<body>
+		</style>
+		
+    <!--<link href="navbar-top-fixed.css" rel="stylesheet">-->
+  </head>
 
-<h1>@jstoetz | Jake Stoetzner</h1>
+  <body>
 
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="#">@jstoetz | Jake Stoetzner</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+        </ul>
+        <form class="form-inline mt-2 mt-md-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <main role="main" class="container">
+			
 <h2>Contact</h2>
 
-<p>call-text: <a href="tel:1-785-691-5223">785-691-5223</a></p>
+<p>call | text <a href="tel:1-785-691-5223">785-691-5223</a></p>
 
-<p>email: <a href="mailto:jake.stoetzner@gmail.com">jake.stoetzner@gmail.com</a></p>
+<p>email <a href="mailto:jake.stoetzner@gmail.com">jake.stoetzner@gmail.com</a></p>
 
-<p>twitter: <a href="https://twitter.com/jstoetz">@jstoetz</a></p>
+<p>twitter <a href="https://twitter.com/jstoetz">@jstoetz</a></p>
 
-<p>linkedin: <a href="https://www.linkedin.com/in/jstoetz/">@jstoetz</a></p>
+<p>linkedin <a href="https://www.linkedin.com/in/jstoetz/">@jstoetz</a></p>
 
-<p>facebook: <a href="https://www.facebook.com/jstoetz/">@jstoetz</a></p>
+<p>facebook <a href="https://www.facebook.com/jstoetz/">@jstoetz</a></p>
 
-<p>insta: <a href="https://www.instagram.com/jstoetz/">@jstoetz</a></p>
+<p>insta <a href="https://www.instagram.com/jstoetz/">@jstoetz</a></p>
 
 <h2>About</h2>
 
 <p>Jake Stoetzner loves talking about himself in the third person. He grew up in Austin, TX. He played football at the University of Tulsa where he met his brilliant wife, Dr. Kelli Henderson. They have three boys - Cooper, Parker and Greyson - and currently live in Lawrence, KS. </p>
 
-<p>Jake has his mechanical engineering degree from the University of Tulsa. He graduated summa cum laude from Oklahoma City University Law School. He was later admitted to the Texas, Kansas and Missouri bars, but he no longer practices. After a 10 year career in the financial services industry, he is now focused on writing, algorithmic options trading strategies and commercial real estate.</p>
+<p>Jake has his mechanical engineering degree from the University of Tulsa. He graduated summa cum laude from Oklahoma City University Law School. He was later admitted to the Texas, Kansas and Missouri bars, but he no longer practices. After a 10 year career in the financial services industry, he is now focused on writing, algorithmic options trading strategies and commercial real estate.
 
-  <script src="js/scripts.js"></script>
-</body>
+</p>
+
+      </div>
+    </main>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="undefined" crossorigin="anonymous"></script>
+  </body>
 </html>
