--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     </nav>
 
     <main role="main" class="container">
-			
+
+<img src"https://www.dropbox.com/s/zsx39hdfpzco26m/2020-05-24%2010.22.49.jpg?dl=0">		
+
 <h2>Contact</h2>
 
 <p>call | text <a href="tel:1-785-691-5223">785-691-5223</a></p>
